# RippedWebServer

./: .flake8  .gitignore  README.md  docker-compose.yml  package.json  webpack.config.js
.circleci/: config.yml
app/: index.js  package.json  webpack.config.js
app/src/: Main.elm
auth/: Dockerfile  requirements.txt  setup.cfg
auth/auth/: __init__.py  middleware.py  repository.py  service.py  views.py
auth/db/: __init__.py  command.py  config.py  schema.sql  service.py
auth/main/: __init__.py  config.py
auth/tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_sharing_link.py
disk_storage/: Dockerfile  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
disk_storage/auth/: middleware.py  service.py
disk_storage/common/: __init__.py
disk_storage/service_api/: service_registry.py
disk_storage/storage/: __init__.py  io.py  service.py  sockets.py  utils.py  views.py
disk_storage/storage/templates/: download.html
disk_storage/tests/: conftest.py  test_auth.py  test_factory.py  test_storage.py
disk_storage/web_server/: __init__.py
files/: Dockerfile  app.py  requirements.txt  settings.py
files/auth/: __init__.py  (+2 more)
server/: Dockerfile  MANIFEST.in  app.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
service-registry/: package-lock.json  package.json
short_url/: Dockerfile  config.py  main.py  orm.py  repository.py  requirements.txt  service.py  url.py
users/: Dockerfile  app.py  requirements.txt  settings.py
web-ui/: Dockerfile  requirements-dev.txt  setup.cfg  setup.py
(+137 files in other folders)
